syntax = "proto3";
package zigbeealliance.distributedcomplianceledger.pki;

option go_package = "github.com/zigbee-alliance/distributed-compliance-ledger/x/pki/types";


import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "zigbeealliance/distributedcomplianceledger/pki/grant.proto";

enum CertificateType {
  DeviceAttestationPKI = 0;
  OperationalPKI = 1;
  VIDSignerPKI = 2;
}

message Certificate {
  
  string pemCert = 1; 
  string serialNumber = 2; 
  string issuer = 3; 
  string authorityKeyId = 4; 
  string rootSubject = 5; 
  string rootSubjectKeyId = 6; 
  bool isRoot = 7; 
  string owner = 8 [(cosmos_proto.scalar) = "cosmos.AddressString"]; 
  string subject = 9; 
  string subjectKeyId = 10; 
  repeated Grant approvals = 11;
  string subjectAsText = 12; 
  repeated Grant rejects = 13; 
  int32 vid = 14 [(gogoproto.moretags) = "validate:\"gte=1,lte=65535\""];
  CertificateType certificateType = 15;
  uint32 schemaVersion = 16;
}
